# stm32tesseract

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml
cli/: Cargo.toml
cli/resources/templates/gcc/: CMakePresets.json.rhai  CMakeProjectConfig.cmake
cli/resources/templates/gcc/cmake/: toolchain-gcc-cortex-m0.cmake  toolchain-gcc-cortex-m0.cmake.filter  toolchain-gcc-cortex-m0plus.cmake  toolchain-gcc-cortex-m0plus.cmake.filter  toolchain-gcc-cortex-m3.cmake  toolchain-gcc-cortex-m33.cmake.filter  toolchain-gcc-cortex-m4.cmake.filter  toolchain-gcc-cortex-m7.cmake  toolchain-gcc-cortex-m7.cmake.filter
cli/src/: cmake_lists_template_expender.rs  cmake_project_generator.rs  cproject_reader.rs  main.rs  reqwest_instance.rs  reqwest_unified_builder.rs  resources_dir.rs  simple_template.rs
cli/src/arm_embedded_gcc_install/: arm_embedded_gcc_install_linux.rs  arm_embedded_gcc_install_windows.rs  mod.rs
cli/src/cmake_install/: cmake_install_linux.rs  cmake_install_windows.rs  mod.rs
cli/src/download_manager/: mod.rs
cli/src/error/: install_error.rs  mod.rs
cli/src/gh_helper/: mirror_election.rs  mod.rs
cli/src/ninja_install/: ninja_install_linux.rs  ninja_install_macos.rs  ninja_install_windows.rs
cli/src/openocd_install/: mod.rs  openocd_install_linux.rs  openocd_install_windows.rs
cli/src/path_env/: mod.rs  path_env_windows.rs
cli/src/pkg_manager/: mod.rs
cli/src/pkgsrc/: github_release.rs  mod.rs  pkg_index.rs
cli/src/pkgsrc/campanula/: asset_acquirer.rs  entity.rs  mod.rs  pkg_acquirer.rs
docs/: README.md  Tutorial.md
gui/: Cargo.toml  build.rs
gui/src/: command_params.rs  main.rs  offscreen_terminal.rs
gui/ui/: appwindow.slint
gui/win32_resource/: app.manifest  app.rc
resources/templates/gcc/: CMakeLists_template.txt  openocd.cfg.rhai
resources/templates/gcc/cmake/: toolchain-gcc-cortex-m3.cmake.filter  toolchain-gcc-cortex-m33.cmake
src/: cmake_project_generator.rs  cproject_reader.rs  main.rs
src/arm_embedded_gcc_install/: mod.rs
src/error/: cproject_reader_error.rs  install_error.rs
src/gh_helper/: mod.rs
src/ninja_install/: mod.rs  ninja_install_linux.rs  ninja_install_windows.rs
src/openocd_install/: mod.rs  openocd_install_windows.rs
src/path_env/: mod.rs  path_env_windows.rs
win32_installer/: nsis.nsi
