[package]
name = "stm32tesseract"
version = "0.1.3"
edition = "2021"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4", features = ["derive"] }
which = "6.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "rustls-tls-native-roots",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
zip = "2"
tar = "0.4"
flate2 = "1.0"
tempfile = "3"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
regex = "1"
once_cell = "1"
rhai = { version = "1", features = ["serde"] }
semver = "1.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[package.metadata.deb]
depends = []
assets = [
    [
        "target/release/stm32tesseract",
        "usr/bin/",
        "755",
    ],
    [
        "resources/**/*",
        "var/lib/stm32tesseract/resources",
        "644",
    ],
]
