[package]
name = "stm32tesseract"
version = "0.2.1"
edition = "2021"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
license = "BSD-3-Clause"

[dependencies]
base64 = "0.22"
clap = { version = "4.4.6", features = ["derive"] }
which = "7"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "http2",
    "json",
    "rustls-tls-native-roots",
] }
scopeguard = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
zip = "2"
tar = "0.4"
tokio = "1"
trauma = "2"
flate2 = "1"
tempfile = "3"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
regex = "1.11"
once_cell = "1.20"
rhai = { version = "1", features = ["serde"] }
semver = "1.0"
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[package.metadata.deb]
depends = []
assets = [
    [
        "target/release/stm32tesseract",
        "usr/bin/",
        "755",
    ],
    [
        "resources/**/*",
        "var/lib/stm32tesseract/resources",
        "644",
    ],
]
