[package]
name = "stm32tesseract-gui"
version = "0.1.3"
edition = "2021"
build = "build.rs"
authors = ["ArcticLampyrid <ArcticLampyrid@outlook.com>"]
license = "BSD-3-Clause"

[dependencies]
clap = { version = "4", features = ["derive"] }
slint = "1.8"
portable-pty = "0.8.1"
strip-ansi-escapes = "0.2.0"
once_cell = "1.18.0"
rfd = { version = "0.15", default-features = false, features = [
    "async-std",
    "xdg-portal",
] }
which = "6.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }
check_elevation = "0.2"

[build-dependencies]
slint-build = "1.0"
embed-resource = "2.3"

[package.metadata.deb]
depends = ["stm32tesseract"]
